Moved favicon out of public folder

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <meta name="growthBookUrl" content="">
     <meta name="apiMyOrgUrl" content="https://api-dev.minforening.dk/api">
     <link rel="manifest" href="/manifest.json">
-    <script type="module" src="/msal-browser.min.js" type="text/javaScript"></script>
+    <link rel="icon" href="/favicon.ico">
+    <script type="module" src="/msal-browser.min.js"></script>
     <title>MinForening</title>
   </head>
   <body>
